# JACO

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  fastjaco  fastng  jaco.c  jaco.h  jaco_SETH.c  jaco_SETH.h  main.c  mixprofmcmc  observesim.c  params.h  profile.c  psf.c  qplot.sm  radial.c  sherpa.c  sherpa_SETH.c  specplot  specplot.sm  standalone.c  standalone.h  standalone_SETH.c  standalone_SETH.h  sz_fitting.c  sz_fitting.h  sz_jaco_interface.c  sz_jaco_interface.h  veldisp.c
buildscripts/: ax_check_compiler_flags.m4
hrothgar/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  commandline.texinfo  config.h.in  configure  configure.ac  hrothgar.c  hrothgar.h  hrothgar.info  hrothgar.texinfo  hrothgar_SETH.c  hrothgar_help.h  hrothgar_image.c  hrothgar_mpi.c  hrothgar_proto.h  hrothgar_test.c  mcfit.c  mcmcprob.c  version.texi
hrothgar/buildscripts/: acx_mpi.m4  texi2c  texi2man
hrothgar/sciutils/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  alloc.c  angdist.c  config.h.in  configure  configure.ac  genbetai.c  readdata.c  readxray.c  readxray_SETH.c  sciutils.h  sciutils.info  sciutils.texinfo  version.texi  ztompc.c
